# sql-browser

./: .gitignore  README.md  USAGE.md  pyproject.toml  test.sh
examples/: create_sample_db.py
sql_browser/: __init__.py  cli.py  database.py  llm.py  logger.py  query_executor.py
